--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Portal de Hotéis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <header class="header">
+    <h1>Portal de Hotéis</h1>
+    <form class="search-form">
+      <input type="text" placeholder="Buscar hotéis...">
+      <button type="submit">Buscar</button>
+    </form>
+    <nav class="menu">
+      <a href="principal.html">Início</a>
+      <a href="hotel1.html">Hotel lago</a>
+      <a href="hotel2.html">Hotel montanha</a>
+      <a href="hotel3.html">Hotel cachorro</a>
+      <a href="hotel4.html">Hotel cachoeira</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="sidebar">
+      <h2>Hotéis Disponíveis</h2>
+      <img src="https://picsum.photos/id/1011/200/150" alt="hotel">
+      <img src="https://picsum.photos/id/1015/200/150" alt="hotel">
+      <img src="https://picsum.photos/id/1025/200/150" alt="hotel">
+      <img src="https://picsum.photos/id/1035/200/150" alt="hotel">
+    </section>
+
+    <section class="content">
+      <h2>Bem-vindo ao Portal de Hotéis</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio nam eligendi ut rem a impedit maiores, laboriosam unde, odit porro praesentium dignissimos aliquid magnam alias. Iusto maiores, doloremque saepe iure vel id quam et nemo ratione reprehenderit molestias. Alias modi eaque nesciunt quia odio, molestias cum veniam nulla soluta laudantium debitis rerum ipsum dicta ex atque! Illum placeat ad id. Ex natus reprehenderit ut voluptate corrupti consequatur quasi, eos delectus maxime iusto exercitationem illum cupiditate eaque repudiandae repellat quae unde obcaecati assumenda perferendis minima tenetur. Minus maxime illo voluptas repellendus fugiat assumenda, labore ipsum dolore saepe. A nemo ducimus repellat tempore. Optio totam voluptas commodi reiciendis facilis pariatur dicta obcaecati, repellendus nam reprehenderit. Non libero animi mollitia ducimus incidunt ea tempore tempora harum voluptatem magni recusandae omnis iusto repellendus vel ex, fugiat ad, corporis praesentium obcaecati possimus eaque? Debitis, repellendus. Aperiam, deleniti in cum ipsam harum, deserunt voluptatibus quidem a impedit pariatur voluptate id amet mollitia, nulla fugit repellendus dolor itaque non? Quaerat, cupiditate. Officia sapiente tenetur ducimus non incidunt ipsum ullam porro aperiam inventore, ex ad quibusdam! Beatae mollitia, nam a voluptatum temporibus repudiandae sequi, fugit quia nulla quo consectetur qui perspiciatis! Et modi quis, hic reprehenderit laudantium quas.</p>
+    </section>
+  </main>
+
 </body>
 </html>
